--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
@@ -68,7 +68,9 @@
             <Button Name="Button2" Click="Button2_Click">Print keyring info</Button>
             <Button Name="Button3" Click="ButtonExport_Click">Export keyring</Button>
             <Button Name="Button4" Click="ButtonImport_Click">Import keyring</Button>
-
+            <Button Name="ButtonExportContact" Click="ButtonExportContact_Click">Export contact</Button>
+            <Button Name="ButtonImportContact" Click="ButtonImportContact_Click">Import contact</Button>
+            
             <TextBlock>Enter IP address of MediaWiki server</TextBlock>
             <TextBox Name="TextBoxIp" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap"
                      Text="{Binding IP}" />
