--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
@@ -68,6 +68,26 @@
             <Button Name="Button2" Click="Button2_Click">Print keyring info</Button>
             <Button Name="Button3" Click="ButtonExport_Click">Export keyring</Button>
             <Button Name="Button4" Click="ButtonImport_Click">Import keyring</Button>
+            <Button Name="ButtonGenerateContact" Click="ShowButtonPopup_Click" Tag="GenerateContactPopup">Generate contact</Button>
+            <!--Generate contact popup-->
+            <Popup Name="GenerateContactPopup" PlacementTarget="ButtonGenerateContact" IsLightDismissEnabled="True">
+                <Border BorderBrush="Black" BorderThickness="1,1,1,1">
+                    <Grid>
+                        <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto, Auto, Auto, Auto" Background="White">
+                            <TextBlock Grid.Row="0" Grid.Column="0" Name="GenerateContactText" 
+                                       Text="Generate contact information to be shared with other users."
+                                       TextAlignment="Center" />
+                            <TextBox Grid.Row="1" Grid.Column="0" Name="ServerLinkTextBox" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap"
+                                     Text="{Binding ServerLinkPopUp}" Watermark="Server IP" />
+                            <TextBox Grid.Row="2" Grid.Column="0" Name="NicknameTextBox" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap"
+                                     Text="{Binding NicknamePopUp}" Watermark="nickname" />
+                            <Button Grid.Row="3" Grid.Column="0" Click="HideButtonPopup_Click" Tag="GenerateContactPopup" Margin="30,80,10,10">Cancel</Button>
+                            <Button Grid.Row="3" Grid.Column="1" Click="GenerateContactPopup_Click" Tag="GenerateContactPopup" Margin="150,80,30,10" Background="LightBlue">Confirm</Button>
+                        </Grid>
+                    </Grid>
+                </Border>
+            </Popup>
+            
             <Button Name="ButtonExportContact" Click="ButtonExportContact_Click">Export contact</Button>
             <Button Name="ButtonImportContact" Click="ButtonImportContact_Click">Import contact</Button>
             
