--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
@@ -94,12 +94,14 @@
             <Popup Name="ExportContactsPopup" PlacementTarget="ButtonExportContact" IsLightDismissEnabled="True">
                 <Border BorderBrush="Black" BorderThickness="1,1,1,1">
                     <Grid>
-                        <Grid ColumnDefinitions="Auto" RowDefinitions="Auto, Auto, Auto" Background="White">
+                        <Grid ColumnDefinitions="Auto" RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto" Background="White">
                             <TextBlock Grid.Row="0" Grid.Column="0" Name="ExportContactsText" 
                                        Text="Select the contacts you wish to export."
                                        TextAlignment="Center" />
-                            
-                            <ListBox Grid.Row="1" Grid.Column="0" Items="{Binding ExportContacts, Mode=TwoWay}" SelectionMode="Multiple, Toggle" SelectedItems="{Binding SelectedExportContacts}">
+                            <TextBlock Grid.Row="1" Grid.Column="0" Name="ExportContactsOwnText" 
+                                       Text="List of own contacts."
+                                       TextAlignment="Left" />
+                            <ListBox Grid.Row="2" Grid.Column="0" Items="{Binding ExportContactsOwn, Mode=TwoWay}" SelectionMode="Multiple, Toggle" SelectedItems="{Binding SelectedExportContactsOwn}">
                                 <ListBox.ItemTemplate>
                                     <DataTemplate DataType="Utilities:Contact">
                                         <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
@@ -111,8 +113,23 @@
                                     </DataTemplate>
                                 </ListBox.ItemTemplate>
                             </ListBox>
-                            <Button Grid.Row="2" Grid.Column="0" Click="HideButtonPopup_Click" Tag="ExportContactsPopup" Margin="30,80,10,10">Cancel</Button>
-                            <Button Grid.Row="2" Grid.Column="0" Click="ExportContactsPopup_Click" Tag="ExportContactsPopup" Margin="300,80,30,10" Background="LightBlue">Confirm</Button>
+                            <TextBlock Grid.Row="3" Grid.Column="0" Name="ExportContactsOtherText" 
+                                       Text="List of other contacts."
+                                       TextAlignment="Left" />
+                            <ListBox Grid.Row="4" Grid.Column="0" Items="{Binding ExportContactsOther, Mode=TwoWay}" SelectionMode="Multiple, Toggle" SelectedItems="{Binding SelectedExportContactsOther}">
+                                <ListBox.ItemTemplate>
+                                    <DataTemplate DataType="Utilities:Contact">
+                                        <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
+                                            <TextBlock Grid.Row="0" Grid.Column="0">Nickname: </TextBlock>
+                                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Nickname}" />
+                                            <TextBlock Grid.Row="1" Grid.Column="0">Server link: </TextBlock>
+                                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding ServerLink}" />
+                                        </Grid>
+                                    </DataTemplate>
+                                </ListBox.ItemTemplate>
+                            </ListBox>
+                            <Button Grid.Row="5" Grid.Column="0" Click="HideButtonPopup_Click" Tag="ExportContactsPopup" Margin="30,80,10,10">Cancel</Button>
+                            <Button Grid.Row="5" Grid.Column="0" Click="ExportContactsPopup_Click" Tag="ExportContactsPopup" Margin="300,80,30,10" Background="LightBlue">Confirm</Button>
                         </Grid>
                     </Grid>
                 </Border>
