--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/CredentialsPopup.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/CredentialsPopup.axaml
@@ -12,7 +12,7 @@
     </Window.Resources>
     
     <StackPanel HorizontalAlignment="Center">
-        <TextBlock HorizontalAlignment="Center" Name="Text" Margin="10, 5, 10, 5"/>
+        <TextBlock HorizontalAlignment="Center" Name="TextBlock" Margin="10, 5, 10, 5"/>
         <Grid ColumnDefinitions="250, Auto" Margin="20, 25, 20, 5">
             <TextBox Grid.Column="0" Name="TextBoxUsername" Watermark="Enter username"></TextBox>
             <CheckBox Grid.Column="1" Name="CheckBoxUsername" IsChecked="False" Margin="20,0,0,0" Unchecked="CheckBoxUsername_OnUnchecked">Save username</CheckBox>
