--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MessageBox.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MessageBox.axaml
@@ -1,23 +1,20 @@
-<!--
-Code based on https://stackoverflow.com/questions/55706291/how-to-show-a-message-box-in-avaloniaui-beta
-From answer by user 'kekekeks' Apr 16 '19 at 12:05
--->
-
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="SecureWiki.Views.MessageBox" SizeToContent="WidthAndHeight" CanResize="False">
+        mc:Ignorable="d" d:DesignWidth="850" d:DesignHeight="400"
+        x:Class="SecureWiki.Views.MessageBox" SizeToContent="WidthAndHeight" CanResize="False"
+        Title="SecureWiki Warning">
+    <!--CanResize="False" currently does nothing. Not sure this is fixable with avalonia-->
     <StackPanel HorizontalAlignment="Center">
-        <TextBlock HorizontalAlignment="Center" Name="Text"/>
-        <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Name="Buttons">
+        <TextBlock HorizontalAlignment="Center" Name="TextBlock"/>
+        <StackPanel HorizontalAlignment="Center" Name="StackPanelButtons" Orientation="Horizontal">
+            <!-- set margins for all buttons -->
             <StackPanel.Styles>
                 <Style Selector="Button">
                     <Setter Property="Margin" Value="5"/>
                 </Style>
             </StackPanel.Styles>
-
         </StackPanel>
     </StackPanel>
 </Window>
